--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -31,8 +31,11 @@ version-resolver:
       - 'patch'
   default: patch
 template: |
-  ## Changes
+  ## What's changed
   $CHANGES
+
+  **Full Changelog**: $REPOSITORY/compare/$PREVIOUS_VERSION...$RESOLVED_VERSION
+  -
 autolabeler:
   - label: feature
     branch:
@@ -46,6 +49,9 @@ autolabeler:
       - '*.yml'
     branch:
       - '/^docs?[/-].+/'
+  - label: deps
+    branch:
+      - '/^dependabot\/.+/'
   - label: minor
     branch:
       - '/^feat(ure)?[/-].*/'
